common-applications/control/prometheus/mindspore-cn-north4/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - prometheus'
  name: mindspore-beijing4-prometheus-ingress
spec:
  tls:
    - hosts:
        - mindspore-beijing4-prometheus.osinfra.cn
      secretName: mindspore-beijing4-prometheus-tls
  rules:
    - host: mindspore-beijing4-prometheus.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: prometheus
              servicePort: 80
            path: /
